# python-homework-storage-2025

./: .gitignore  LAB01Task1  README.md  Task3.py  Task4.py  course.py  empty2  lab01.1.py  lab01.3.py  lab01.4.py  lab01.5.py  lab05.1.py
Course/: README.md
LAB01/: task02.py  task04.py  task_02.py  task_04.py
LAB02/: task03.py  task04.py  task05.py  task_01.py  task_02.py  task_03.py  task_04.py  task_05.py
LAB03/: task_02.py  task_04.py
LAB04/: task_01.py  task_02.py  task_03.py  task_05.py
LAB05/: task_01.py  task_03.py  task_05.py
LAB06/: task_02.py  task_03.py
LAB07/: task_01.py  task_03.py  task_04.py  task_05.py
LAB08/: task_01.py  task_02.py  task_03.py
Lab04/: Task2.py
Lab05/: Task1.py  Task3.py  Task5.py
Lab06/: Lab06_01.py  Lab06_02.py  Lab06_03.py
Lab07/: Task2.py  Task4.py
Lab08/: Task3.py
address-book-manager/: address.py  address_book.py  contact.py
lab02/: Task1.py  Task3.py
lab04/: lab04_01.py  lab04_02.py  lab04_03.py  lab04_04.py  lab04_05.py
lab05/: lab05_01.py  lab05_02.py  lab05_02_file.txt  lab05_03.py  lab05_03_file_f.txt  lab05_03_file_s.txt  lab05_04.py  lab05_04_file.txt  lab05_05.py  numbers.txt
Алпацкая Марина Фёдоровна/: task.03.py  (+3 more)
Прокофьева Алла Александровна/Course/: pyproject.toml
Прокофьева Алла Александровна/Course/minidiary/: cli.py  entry.py  mood.py
Прокофьева Алла Александровна/Course/tests/: __init__.py  test_diary.py
Сироткина Елизавета Александровна/Course/: pyproject.toml
Сироткина Елизавета Александровна/Course/shoplist/: __init__.py  category.py  cli.py  product.py  shopping_list.py
(+383 files in other folders)
