[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minidiary"
version = "1.0.0"
description = "Мини-дневник с анализом настроения"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Прокофьева Алла"}]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
minidiary = "minidiary.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
